trying to find the right way to org with cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,10 @@ project(raytracer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(raytracer src/main.cpp)
+add_subdirectory(src)
 
 # SETUP GTEST
 add_subdirectory(${CMAKE_SOURCE_DIR}/vendor/googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(run_tests tests/ExampleTest.cpp)
-target_link_libraries(run_tests gtest gtest_main)
+add_subdirectory(tests)
