add color constructor and getter methods

--- a/src/data_structures/CMakeLists.txt
+++ b/src/data_structures/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(data_structures src/tuple.cpp)
+add_library(data_structures src/tuple.cpp src/color.cpp)
 target_include_directories(data_structures PUBLIC include)
