--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_executable(run_tests data_structures/tuple_test.cpp)
+add_executable(run_tests
+    data_structures/tuple_test.cpp
+    data_structures/color_test.cpp
+)
 target_link_libraries(run_tests gtest gtest_main data_structures)
