add more to canvas initialization test

--- a/src/drawing/CMakeLists.txt
+++ b/src/drawing/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(drawing src/canvas.cpp)
 
+target_link_libraries(drawing data_structures)
 target_include_directories(drawing PUBLIC include)
