add constructor for ppm_writer

--- a/src/drawing/CMakeLists.txt
+++ b/src/drawing/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(drawing src/canvas.cpp)
+add_library(drawing src/canvas.cpp src/ppm_writer.cpp)
 
 target_link_libraries(drawing data_structures)
 target_include_directories(drawing PUBLIC include)
