--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
   "tasks": [
     {
       "type": "shell",
-      "label": "CMake Project",
+      "label": "build project",
       "command": "/usr/bin/cmake",
       "args": [".."],
       "options": {
