--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(run_tests
     data_structures/tuple_test.cpp
     data_structures/color_test.cpp
+    data_structures/matrix_test.cpp
     drawing/canvas_test.cpp
     drawing/ppm_writer_test.cpp
 )
